--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  build_runner: ^2.3.0
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
   freeze: ^1.0.0
   freezed_annotation: ^2.4.4
+  json_serializable: ^6.0.0
   sqflite: ^2.3.3+1
+  sqflite_common_ffi: ^2.3.3
+  sqflite_common_ffi_web: ^0.4.4
 
 dev_dependencies:
   flutter_lints: ^3.0.0
